--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,7 @@
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $base-font-size:   16px;
-$base-font-weight: 300;
+$base-font-weight: 350;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
